[gd_scene load_steps=9 format=2]

[ext_resource path="res://Views/Explore/UI/SubUI/Crew.gd" type="Script" id=1]
[ext_resource path="res://ReusableUI/TraitCard/TraitCard.tscn" type="PackedScene" id=2]
[ext_resource path="res://ReusableUI/AllActionCard/AllActionCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://TextureBank/Interface/paperdoll.jpg" type="Texture" id=4]
[ext_resource path="res://ReusableUI/ActionCard/ActionCard.tscn" type="PackedScene" id=5]
[ext_resource path="res://ReusableUI/VitalsCard/VitalsCard.tscn" type="PackedScene" id=6]
[ext_resource path="res://ReusableUI/BioCard/BioCard.tscn" type="PackedScene" id=7]
[ext_resource path="res://ReusableUI/ResistanceCard/Resistance.tscn" type="PackedScene" id=8]

[node name="Crew" type="PanelContainer" groups=[
"SubUI",
]]
margin_right = 1000.0
margin_bottom = 800.0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 1000.0
margin_bottom = 800.0

[node name="Left" type="VBoxContainer" parent="HBox"]
margin_right = 330.0
margin_bottom = 800.0
size_flags_horizontal = 3

[node name="TraitCard" parent="HBox/Left" instance=ExtResource( 2 )]
margin_right = 330.0
margin_bottom = 66.0

[node name="AllActionCard" parent="HBox/Left" instance=ExtResource( 3 )]
margin_top = 70.0
margin_right = 330.0
margin_bottom = 101.0

[node name="Center" type="VBoxContainer" parent="HBox"]
margin_left = 334.0
margin_right = 664.0
margin_bottom = 800.0
size_flags_horizontal = 3

[node name="Crewman" type="HBoxContainer" parent="HBox/Center"]
editor/display_folded = true
margin_right = 330.0
margin_bottom = 31.0

[node name="Prev" type="Button" parent="HBox/Center/Crewman"]
margin_right = 39.0
margin_bottom = 31.0
text = "Prev"

[node name="Name" type="Label" parent="HBox/Center/Crewman"]
margin_left = 43.0
margin_right = 286.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "{CREWMAN NAME}"
align = 1

[node name="Next" type="Button" parent="HBox/Center/Crewman"]
margin_left = 290.0
margin_right = 330.0
margin_bottom = 31.0
text = "Next"

[node name="Panel" type="Panel" parent="HBox/Center"]
editor/display_folded = true
margin_top = 35.0
margin_right = 330.0
margin_bottom = 542.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="TextureRect" type="TextureRect" parent="HBox/Center/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.449
margin_top = -173.034
margin_right = 316.551
margin_bottom = 514.966
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
stretch_mode = 1

[node name="ActionCard" parent="HBox/Center" instance=ExtResource( 5 )]
margin_top = 546.0
margin_right = 330.0
margin_bottom = 800.0
size_flags_vertical = 3

[node name="Right" type="VBoxContainer" parent="HBox"]
margin_left = 668.0
margin_right = 1000.0
margin_bottom = 800.0
size_flags_horizontal = 3

[node name="VitalsCard" parent="HBox/Right" instance=ExtResource( 6 )]
margin_top = 0.0
margin_right = 332.0
margin_bottom = 136.0

[node name="BioCard" parent="HBox/Right" instance=ExtResource( 7 )]
margin_top = 140.0
margin_right = 332.0
margin_bottom = 495.0

[node name="ResistanceCard" parent="HBox/Right" instance=ExtResource( 8 )]
margin_top = 499.0
margin_right = 332.0
margin_bottom = 800.0
size_flags_vertical = 3
